fix scrollbar

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -50,33 +50,39 @@ body[dir='rtl'] .Toastify__toast {
 }
 
 html {
-  overflow: hidden;
-  width: 100%;
   height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-y: overlay;
+  overflow-x: hidden;
 }
 
 body {
-  position: absolute;
-  padding: 0;
   width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto !important;
+  margin: 0;
+  padding: 0;
 }
 
-body::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 6px;
-  background-color: #f5f5f5;
+html::-webkit-scrollbar-track {
+  display: none;
 }
 
-body::-webkit-scrollbar {
-  width: 7px;
-  background-color: #f5f5f5;
+html::-webkit-scrollbar-track-piece:start,
+html::-webkit-scrollbar-track-piece:end,
+html::-webkit-scrollbar * {
+  background: transparent;
 }
 
-body::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar {
+  width: 5px;
+  background-color: transparent;
+  z-index: 1000000;
+}
+
+html::-webkit-scrollbar-thumb {
   border-radius: 6px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #fa810e;
+  z-index: 1000000;
 }
